--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ gradio_client==1.5.4
 graphviz==0.20.1
 grpcio==1.59.2
 grpcio-status==1.59.2
+gunicorn>=20.0.0
 h11==0.14.0
 h5py==3.10.0
 httpcore==1.0.7
